Added Quotes to the main page and contact infos

--- a/app/src/locales/en/header.json
+++ b/app/src/locales/en/header.json
@@ -1,8 +1,12 @@
 {
     "navs": {
         "home": "Home",
-        "news": "News",
-        "accomodations": "Accomodations",
-        "about": "About us"
+        "bio": "About me",
+        "aromatherapy": "Aromatherapy",
+        "phytotherapy": "Phytotherapy",
+        "prices": "Formules et tarifs",
+        "articles": "Articles",
+        "more-info": "More info",
+        "contact": "Contact"
     }
 }
